# gdr-socialization-afd

./: .gitignore  README.md  pyproject.toml
data/raw/: README.md
outputs/tables/: table1_main_results.csv  table2_balance_summary.csv  table3_sensitivity_summary.csv  table4_placebo_summary.csv  table5_cohort_by_age1990.csv  table6_cohort_by_yborn.csv
outputs/tables/placebo/: step6_spatial_placebo__east_youth__y_afd_vote__spec_a_plus__land_draws.csv  step6_spatial_placebo__east_youth__y_afd_vote__spec_a_plus__land_results.csv  step6_spatial_placebo__east_youth__y_afd_vote__spec_a_plus__xs11_draws.csv  step6_spatial_placebo__east_youth__y_afd_vote__spec_a_plus__xs11_results.csv  step6_spatial_placebo__east_youth__y_afd_vote_all_valid__spec_a_plus__land_draws.csv  step6_spatial_placebo__east_youth__y_afd_vote_all_valid__spec_a_plus__land_results.csv  step6_spatial_placebo__east_youth__y_afd_vote_all_valid__spec_a_plus__xs11_draws.csv  step6_spatial_placebo__east_youth__y_afd_vote_all_valid__spec_a_plus__xs11_results.csv
scripts/: step1_build_model_afd.py  step2_ate_overlap_eastyouth.py  step3_balance_overlap_diagnostics.py  step4_inference_multicluster_eastyouth.py  step5_rosenbaum_delta_curve.py  step6_spatial_placebo.py  step7_cohort_heterogeneity.py  step8_thesis_figures.py  step9_thesis_tables.py
src/: audit.py  clean.py  config.py  io.py
